manifests/database/templates/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: database
spec:
  selector:
    tier: db
  ports:
    - name: mysql-default
      protocol: TCP
      port: 3306
      targetPort: mysql-default

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-database-access
  namespace: database
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: backend
    ports:
    - port: mysql-default
